Finished the deletion of comments